# TelegramBot_Cpp

./: README.md
example-bot/: CMakeLists.txt
example-bot/src/: Al.hpp  api.cpp  calculator.cpp  calculator.hpp  engine.cpp  keyboard.cpp  library.cpp  math.cpp  math.hpp
src/Bot_С++/: Al.cpp  En.cpp  En.hpp  api.hpp  calculatorEngine.cpp  library.hpp  links.cpp  links.hpp
